--- a/SCOT/SCOT.ipynb
+++ b/SCOT/SCOT.ipynb
@@ -29,7 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Notebook for SCOT (Semantic Correspondence as an Optimal Transport Problem). \n",
+        "Notebook for SCOT (Semantic Correspondence as an Optimal Transport Problem).\n",
+        "\n",
+        "References:\n",
         "\n",
         "https://openaccess.thecvf.com/content_CVPR_2020/papers/Liu_Semantic_Correspondence_as_an_Optimal_Transport_Problem_CVPR_2020_paper.pdf\n",
         "\n",
@@ -55,22 +57,10 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JXL1vBE_YeH1",
-        "outputId": "fdacbbf0-a8e4-4318-b1fc-44a0a2f790fc"
+        "id": "JXL1vBE_YeH1"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -87,22 +77,10 @@
         "%cd '/content/drive/MyDrive/SemesterProj/SCOT/'"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WKLVMyyBGbp7",
-        "outputId": "47fe7eec-4541-4f3f-c3d4-358bd932898c"
+        "id": "WKLVMyyBGbp7"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/drive/MyDrive/SemesterProj/SCOT-master\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -121,48 +99,10 @@
         "!pip install requests"
       ],
       "metadata": {
-        "id": "jo-QcUAkFsOH",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6cfa9b3e-4c3d-455a-999c-b897136402e4"
+        "id": "jo-QcUAkFsOH"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: scikit-image in /usr/local/lib/python3.8/dist-packages (0.18.3)\n",
-            "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (3.2.2)\n",
-            "Requirement already satisfied: PyWavelets>=1.1.1 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (1.4.1)\n",
-            "Requirement already satisfied: tifffile>=2019.7.26 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (2022.10.10)\n",
-            "Requirement already satisfied: pillow!=7.1.0,!=7.1.1,>=4.3.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (7.1.2)\n",
-            "Requirement already satisfied: scipy>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (1.7.3)\n",
-            "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (2.9.0)\n",
-            "Requirement already satisfied: numpy>=1.16.5 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (1.21.6)\n",
-            "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image) (2.8.8)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (0.11.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (3.0.9)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.8.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.4.4)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.8/dist-packages (from python-dateutil>=2.1->matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.15.0)\n",
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.8/dist-packages (1.3.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.8/dist-packages (from pandas) (2.8.2)\n",
-            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.8/dist-packages (from pandas) (1.21.6)\n",
-            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.8/dist-packages (from pandas) (2022.7)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.8/dist-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (2.25.1)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests) (2.10)\n",
-            "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests) (4.0.0)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests) (1.24.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests) (2022.12.7)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -297,7 +237,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Run\n"
+        "### Inference\n"
       ],
       "metadata": {
         "id": "WfUmGBVHbMtg"
@@ -490,7 +430,7 @@
       "source": [
         "# Set configuration dictionary\n",
         "\n",
-        "args = {# GPU index\n",
+        "args = {# GPU id\n",
         "        'gpu': '0',\n",
         "        # Dataset path\n",
         "        'datapath': '../data/120m/',\n",
@@ -511,13 +451,17 @@
         "        'alpha': 0.05,\n",
         "        'hyperpixel': '(2,4,5,18,19,20,24,32)',\n",
         "        'logpath': '',\n",
-        "        # Optimal Transport type: OT or OTGeo (uses RHM)\n",
+        "        # Similarity type: OT, cos, OTGeo, cosGeo (the last 2 use RHM)\n",
         "        'sim': 'OTGeo',\n",
+        "        # Exponential factor on initial cosine cost (default)\n",
         "        'exp1': 1.0,\n",
+        "        # Exponential factor on final OT scores (default)\n",
         "        'exp2': 0.5,\n",
+        "        # Epsilon for Sinkhorn Regularization (default)\n",
         "        'eps': 0.05,\n",
         "        # Whether to use(1) classmap or not(0) - we skip classmap here\n",
         "        'classmap': 0,\n",
+        "        # Activation map folder, empty for end2end computation\n",
         "        'cam': '',\n",
         "        # Method to compute warped satellite labels: 'max', 'max_filtered', 'average' or 'average_filtered'\n",
         "        'weight_type': 'max',\n",
